# mlx

./: CMakeLists.txt
benchmarks/python/: packed_qmm_bench.py  packed_qmv_bench.py  sdpa_vector_bench.py
docs/src/: index.rst
docs/src/usage/: compile.rst
mlx/: CMakeLists.txt  fast.cpp  fast.h  fast_primitives.h  ops.cpp  ops.h  primitives.cpp  primitives.h  utils.cpp  utils.h
mlx/backend/metal/: copy.cpp  custom_kernel.cpp  device.cpp  device.h  matmul.cpp  metal.cpp  primitives.cpp  quantized.cpp  scaled_dot_product_attention.cpp
mlx/backend/metal/kernels/: quantized.h  quantized.metal  scaled_dot_product_attention.metal  sdpa_vector.h
mlx/backend/no_metal/: primitives.cpp
mlx/distributed/: CMakeLists.txt
mlx/distributed/gloo/: CMakeLists.txt  gloo.cpp
mlx/distributed/sockets/: CMakeLists.txt  sockets.cpp
mlx/internal/tuner/: ops.cpp  ops.h  primitives.h
mlx/io/: safetensors.cpp
python/mlx/nn/layers/: __init__.py  embedding.py  linear.py  quantized.py
python/src/: CMakeLists.txt  fast.cpp  internal.cpp  mlx.cpp  ops.cpp
python/tests/: test_compile.py  test_quantized.py
